--- a/css/new.css
+++ b/css/new.css
@@ -1595,6 +1595,41 @@ margin-bottom: 1.5rem;
     right: 3rem;
     cursor: pointer;
 }
+.delivery__block{
+    display: none;
+}
+.delivery__block.active{
+    display: block;
+}
+.delivery__block-wrapper{
+    padding: 0 1.9rem 1.9rem;
+}
+.delivery__block-search{
+    width: 100%;
+    border: 0.1rem solid #f9f9f9;
+    border-radius: 0.8rem;
+    padding: 1.4rem 1.6rem;
+    display: flex;
+    margin-bottom: 1.3rem;
+}
+.delivery__block-search input{
+    border: none;
+    width: 100%;
+    outline: none;
+    font-size: 1.4rem;
+}
+.delivery__block-search svg{
+    width: 2.4rem;
+    height: 2.4rem;
+}
+.delivery__block-wrapper iframe{
+    border-radius: 0.8rem;
+    width: 100%;
+    height: 37.4rem;  
+}
+.delivery__thumb{
+    cursor: pointer;
+}
 
 
 
@@ -1613,6 +1648,9 @@ margin-bottom: 1.5rem;
     }
     .modal-content{
         width: 95%;
+    }
+    .delivery__block-search input{
+        font-size: 1.9rem;
     }
     .header__sale{
         display: none;
